--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
-#spring.jpa.hibernate.use-new-id-generator-mappings= false
 logging.level.root=INFO
 server.port=8090
 
 # App properties
-retry.maxAttempts=2
+retry.maxAttempts=3
 retry.maxDelay=100
+hadoop.data.push.api = http://localhost:8090/api/v1/hadoopserver/pushbigdata
