Updated refactor and updated tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ logging.level.root=INFO
 server.port=8090
 
 # App properties
-retry.maxAttempts=3
+# ideally we would set 3 retries
+retry.maxAttempts=5 
 retry.maxDelay=100
 hadoop.data.push.api = http://localhost:8090/api/v1/hadoopserver/pushbigdata
